[build-system]
requires = ["setuptools>=64", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "apollo-fpga"
authors = [
    {name = "Great Scott Gadgets", email = "dev@greatscottgadgets.com"}
]
license = { text = "BSD" }
description = "Python library and host tools for Apollo FPGA debug controllers."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    'Programming Language :: Python',
    'Development Status :: 5 - Production/Stable',
    'Natural Language :: English',
    'Environment :: Console',
    'Environment :: Plugins',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering',
]
dependencies = [
    "importlib_resources; python_version<'3.9'",
    "pyusb>1.1.1",
    "pyvcd>=0.2.4",
    "prompt-toolkit>3.0.16",
    "pyxdg>=0.27",
]
dynamic = ["version"]

[project.optional-dependencies]
py_ci = [
    "amaranth==0.4.1",
    "luna-usb~=0.1",
]

[project.urls]
repository = "https://github.com/greatscottgadgets/apollo"
issues     = "https://github.com/greatscottgadgets/apollo/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["apollo_fpga*"]

[project.scripts]
apollo = "apollo_fpga.commands.cli:main"

[tool.pdm.scripts]
test.cmd = "python -m unittest discover -p jtag_svf.py -v"

[tool.setuptools-git-versioning]
enabled = true
starting_version = "1.0.0"
